fixed text alignment signup

--- a/css/signup.css
+++ b/css/signup.css
@@ -191,6 +191,7 @@
   padding: 25px;
   height: fit-content;
   width: fit-content;
+  text-align: center;
 }
 
 @media (max-width: 960px) {
